kubernetes/mini-projet/PMA/pma-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pma-ingress
  namespace: k8s-projet
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /pma
            backend:
              service:
                name: pma-service
                port:
                  number: 8080
---
